# Sr_Roberto

./: .gitignore  .replit  ListOfWikis.csv  README.md  SrRoberto.py  SrRobertoTemp.py  pyproject.toml  utils.py
cogs/: opa.py  responda.py  time.py  wiki.py
