[tool.poetry]
name = "repl_python3_SrRoberto"
version = "0.1.0"
description = ""
authors = ["AirtonBorges <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
discord = "^1.7.3"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
